// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacilitiesRowItem should match the previous snapshot 1`] = `
<tr>
  <td>
    org
  </td>
  <td>
    fac
  </td>
  <td>
    SFO
  </td>
  <td>
    123
  </td>
  <td>
    No
  </td>
  <td>
     
    <Badge
      pill={true}
      style={
        Object {
          "textTransform": "uppercase",
          "width": "100%",
        }
      }
      variant="info"
    >
      Submitted
    </Badge>
  </td>
  <td>
    42
  </td>
  <td>
    <Relay(ApplyButton)
      applyButtonDetails={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_applyButtonDetails": true,
          },
          " $refType": "FacilitiesRowItemContainer_facilityApplication",
          "applicationId": 42,
          "applicationStatus": "SUBMITTED",
          "facilityBcghgid": "123",
          "facilityName": "fac",
          "facilityType": "SFO",
          "lastSwrsReportingYear": 2019,
          "operatorName": "org",
        }
      }
      query={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_query": true,
          },
          " $refType": "FacilitiesRowItemContainer_query",
        }
      }
      reportingYear={2019}
    />
  </td>
</tr>
`;

exports[`FacilitiesRowItem should show Draft in the status if the application is in draft 1`] = `
<tr>
  <td>
    org
  </td>
  <td>
    fac
  </td>
  <td>
    SFO
  </td>
  <td>
    123
  </td>
  <td>
    No
  </td>
  <td>
     
    <Badge
      pill={true}
      style={
        Object {
          "textTransform": "uppercase",
          "width": "100%",
        }
      }
      variant="warning"
    >
      Draft
    </Badge>
  </td>
  <td>
    42
  </td>
  <td>
    <Relay(ApplyButton)
      applyButtonDetails={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_applyButtonDetails": true,
          },
          " $refType": "FacilitiesRowItemContainer_facilityApplication",
          "applicationId": 42,
          "applicationStatus": "DRAFT",
          "facilityBcghgid": "123",
          "facilityName": "fac",
          "facilityType": "SFO",
          "lastSwrsReportingYear": 2019,
          "operatorName": "org",
        }
      }
      query={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_query": true,
          },
          " $refType": "FacilitiesRowItemContainer_query",
        }
      }
      reportingYear={2019}
    />
  </td>
</tr>
`;

exports[`FacilitiesRowItem should show approved in the status if the application is approved 1`] = `
<tr>
  <td>
    org
  </td>
  <td>
    fac
  </td>
  <td>
    SFO
  </td>
  <td>
    123
  </td>
  <td>
    No
  </td>
  <td>
     
    <Badge
      pill={true}
      style={
        Object {
          "textTransform": "uppercase",
          "width": "100%",
        }
      }
      variant="success"
    >
      Approved
    </Badge>
  </td>
  <td>
    42
  </td>
  <td>
    <Relay(ApplyButton)
      applyButtonDetails={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_applyButtonDetails": true,
          },
          " $refType": "FacilitiesRowItemContainer_facilityApplication",
          "applicationId": 42,
          "applicationStatus": "APPROVED",
          "facilityBcghgid": "123",
          "facilityName": "fac",
          "facilityType": "SFO",
          "lastSwrsReportingYear": 2019,
          "operatorName": "org",
        }
      }
      query={
        Object {
          " $fragmentRefs": Object {
            "ApplyButtonContainer_query": true,
          },
          " $refType": "FacilitiesRowItemContainer_query",
        }
      }
      reportingYear={2019}
    />
  </td>
</tr>
`;
